// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Composed 1`] = `
<div data-variant="default">
  <div>
    <div style="display: flex; justify-content: space-between; align-items: center;">
      <h2>
        Rolle 1
      </h2>
      <button
        data-color="danger"
        data-size="sm"
        data-variant="secondary"
        type="button"
      >
        <svg
          aria-hidden="true"
          fill="none"
          focusable="false"
          height="1em"
          role="img"
          viewbox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M10 4.75c-.69 0-1.25.56-1.25 1.25v.25h6.5V6c0-.69-.56-1.25-1.25-1.25zm6.75 1.5V6A2.75 2.75 0 0 0 14 3.25h-4A2.75 2.75 0 0 0 7.25 6v.25H4.5a.75.75 0 0 0 0 1.5h.805l.876 11.384a1.75 1.75 0 0 0 1.745 1.616h8.148a1.75 1.75 0 0 0 1.745-1.616l.875-11.384h.806a.75.75 0 0 0 0-1.5h-2.75m-6 4.25a.75.75 0 0 0-1.5 0v6a.75.75 0 0 0 1.5 0zM14 9.75a.75.75 0 0 1 .75.75v6a.75.75 0 0 1-1.5 0v-6a.75.75 0 0 1 .75-.75"
            fill="currentColor"
            fill-rule="evenodd"
          >
          </path>
        </svg>
        Fjern
      </button>
    </div>
  </div>
  <div>
    <ds-field>
      <label
        data-weight="medium"
        for="<removed>"
      >
        Velg rolle
      </label>
      <select
        aria-invalid="false"
        id="<removed>"
      >
        <option value="lærer">
          Lærer
        </option>
        <option value="elev">
          Elev
        </option>
        <option value="forelder">
          Forelder
        </option>
      </select>
    </ds-field>
    <ds-field>
      <label
        data-weight="medium"
        for="<removed>"
      >
        Fødselsnummer
      </label>
      <div>
        <input
          aria-invalid="false"
          id="<removed>"
          type="text"
        >
      </div>
    </ds-field>
    <ds-field>
      <label
        data-weight="medium"
        for="<removed>"
      >
        Etternavn
      </label>
      <div>
        <input
          aria-invalid="false"
          id="<removed>"
          type="text"
        >
      </div>
    </ds-field>
  </div>
  <div>
    <button
      data-size="sm"
      data-variant="secondary"
      type="button"
    >
      Legg til rolle
      <svg
        aria-hidden="true"
        fill="none"
        focusable="false"
        height="1em"
        role="img"
        viewbox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12.75 5.5a.75.75 0 0 0-1.5 0v5.75H5.5a.75.75 0 0 0 0 1.5h5.75v5.75a.75.75 0 0 0 1.5 0v-5.75h5.75a.75.75 0 0 0 0-1.5h-5.75z"
          fill="currentColor"
        >
        </path>
      </svg>
    </button>
  </div>
</div>
`;

exports[`Horizontal 1`] = `
<div
  data-clickdelegatefor="<removed>"
  data-variant="default"
  style="display: grid; grid-auto-flow: column; width: 700px;"
>
  <div>
    <img
      alt="Barn som spiser lunsj"
      src="https://www.udir.no/contentassets/0ae1c5846c254b9f8800c59c393fd03d/skolemiljo.png"
      style="height: 100%; object-fit: cover;"
    >
  </div>
  <div>
    <h2>
      <a
        href="https://www.udir.no/laring-og-trivsel/skolemiljo/slik-kan-skolen-handtere-et-utrygt-skolemiljo/"
        id="<removed>"
        rel="noopener noreferrer"
        target="_blank"
      >
        Hva gjør du når en elev ikke har det trygt og godt på skolen?
      </a>
    </h2>
    <p data-variant="default">
      Hvis dere mistenker eller kjenner til at en elev ikke har det trygt og godt, skal dere snarest undersøke saken. Vi har laget råd om hva dere kan gjøre.
    </p>
  </div>
</div>
`;

exports[`Media 1`] = `
<div data-variant="default">
  <div>
    <img
      alt="Fotografi av forskjellig skoleutstyr"
      src="https://images.unsplash.com/photo-1503676260728-1c00da094a0b?q=80&amp;w=1644&amp;auto=format&amp;fit=crop&amp;ixlib=rb-4.0.3&amp;ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
    >
  </div>
  <div>
    <h2>
      Skoleutstyr
    </h2>
    <p data-variant="default">
      Fylkeskommunen skal sørge for at elevene i videregående skole får gratis lærebøker og andre trykte og digitale læremidler og digitalt utstyr.
    </p>
  </div>
</div>
<div data-variant="default">
  <div>
    <h2>
      Skoleutstyr
    </h2>
    <p data-variant="default">
      Fylkeskommunen skal sørge for at elevene i videregående skole får gratis lærebøker og andre trykte og digitale læremidler og digitalt utstyr.
    </p>
  </div>
  <div>
    <img
      alt="Fotografi av forskjellig skoleutstyr"
      src="https://images.unsplash.com/photo-1503676260728-1c00da094a0b?q=80&amp;w=1644&amp;auto=format&amp;fit=crop&amp;ixlib=rb-4.0.3&amp;ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
    >
  </div>
</div>
`;

exports[`Preview 1`] = `
<div
  data-color="neutral"
  data-variant="default"
>
  <h2>
    Tittel
  </h2>
  <p data-variant="default">
    Innhold
  </p>
  <p
    data-size="sm"
    data-variant="default"
  >
    Fotnote
  </p>
</div>
`;

exports[`Variants 1`] = `
<div
  data-color="neutral"
  data-variant="default"
>
  <div>
    <p data-variant="default">
      data-color: neutral
      <br>
      variant: default
      <br>
    </p>
  </div>
</div>
<div
  data-color="neutral"
  data-variant="tinted"
>
  <div>
    <p data-variant="default">
      data-color: neutral
      <br>
      variant: tinted
      <br>
    </p>
  </div>
</div>
<div
  data-color="accent"
  data-variant="default"
>
  <div>
    <p data-variant="default">
      data-color: accent
      <br>
      variant: default
      <br>
    </p>
  </div>
</div>
<div
  data-color="accent"
  data-variant="tinted"
>
  <div>
    <p data-variant="default">
      data-color: accent
      <br>
      variant: tinted
      <br>
    </p>
  </div>
</div>
<div
  data-color="support1"
  data-variant="default"
>
  <div>
    <p data-variant="default">
      data-color: support1
      <br>
      variant: default
      <br>
    </p>
  </div>
</div>
<div
  data-color="support1"
  data-variant="tinted"
>
  <div>
    <p data-variant="default">
      data-color: support1
      <br>
      variant: tinted
      <br>
    </p>
  </div>
</div>
<div
  data-color="support2"
  data-variant="default"
>
  <div>
    <p data-variant="default">
      data-color: support2
      <br>
      variant: default
      <br>
    </p>
  </div>
</div>
<div
  data-color="support2"
  data-variant="tinted"
>
  <div>
    <p data-variant="default">
      data-color: support2
      <br>
      variant: tinted
      <br>
    </p>
  </div>
</div>
`;

exports[`Video 1`] = `
<div
  data-clickdelegatefor="<removed>"
  data-color="neutral"
  data-variant="default"
>
  <div>
    <iframe
      allow="autoplay; fullscreen; picture-in-picture"
      data-chromatic="ignore"
      height="179px"
      src="https://player.vimeo.com/video/992000551?h=03734e8f67"
      title="30 år med digitalt innsyn"
      width="320px"
    >
    </iframe>
  </div>
  <div>
    <h2>
      <a
        href="https://www.udir.no/regelverk-og-tilsyn/skole-og-opplaring/filmer/"
        id="<removed>"
        rel="noreferrer"
        target="_blank"
      >
        Ny opplæringslov
      </a>
    </h2>
    <p data-variant="default">
      Kunnskapsminister Kari Nessa Nordtun om den nye opplæringsloven.
    </p>
  </div>
</div>
`;

exports[`With Link 1`] = `
<div
  data-clickdelegatefor="<removed>"
  data-color="support1"
  data-variant="default"
>
  <div>
    <img
      alt
      src="https://images.unsplash.com/photo-1454165804606-c3d57bc86b40?q=80&amp;w=1470&amp;auto=format&amp;fit=crop&amp;ixlib=rb-4.0.3&amp;ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
    >
  </div>
  <div>
    <h2>
      <a
        href="https://www.udir.no/eksamen-og-prover/eksamen/ta-fag-som-privatist/"
        id="<removed>"
        rel="noopener noreferrer"
        target="_blank"
      >
        Påmelding til eksamen
      </a>
    </h2>
    <p data-variant="default">
      Du må melde deg på innen 1. februar for våreksamen og 15. september for høsteksamen.
    </p>
    <p
      data-size="sm"
      data-variant="default"
    >
      Privatisteksamen
    </p>
  </div>
</div>
<div
  data-clickdelegatefor="<removed>"
  data-color="neutral"
  data-variant="default"
>
  <div>
    <h2>
      <a
        href="https://www.udir.no/eksamen-og-prover/eksamen/ta-fag-som-privatist/"
        id="<removed>"
        rel="noopener noreferrer"
        target="_blank"
      >
        Påmelding til eksamen
      </a>
    </h2>
    <p data-variant="default">
      Du må melde deg på innen 1. februar for våreksamen og 15. september for høsteksamen.
    </p>
    <p
      data-size="sm"
      data-variant="default"
    >
      Privatisteksamen
    </p>
  </div>
  <div>
    <img
      alt
      src="https://images.unsplash.com/photo-1454165804606-c3d57bc86b40?q=80&amp;w=1470&amp;auto=format&amp;fit=crop&amp;ixlib=rb-4.0.3&amp;ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
    >
  </div>
</div>
`;
